--- a/gnumed/gnumed/test-area/ian/terry-form.tex
+++ b/gnumed/gnumed/test-area/ian/terry-form.tex
@@ -1,5 +1,8 @@
 \documentclass{a4form}
 \usepackage{multicol}
+% this is an example of richard's ``universial form''
+% for making requests
+% Probably won't work outside of AU ;-(
 
 \begin{document}
 \begin{page}
@@ -29,7 +32,8 @@
 \textbf{Requesting Practitioner}\\
 \\
 \field{from_address}}
-\text{22}{55}{50}{\field{patient_address}}
+\text{22}{55}{50}{\field{patient_name}\\
+\field{patient_address}}
 \text{22}{85}{100}{
 \textbf{REQUEST}\\
 \field{request}\\
