--- a/gnumed/gnumed/test-area/ian/a4form.cls
+++ b/gnumed/gnumed/test-area/ian/a4form.cls
@@ -8,10 +8,13 @@
 %     \text{xx}{yy}{ll}{tt} Drwas  text tt at the position (xx, yy) ll is the maximum length, 
 % after which lines are wrapped. most latex commands are accepted in tt.
 
-% \field{f} in the input to \text, queries gnumed for the value of field f and replaces itself
-% with this value
-% \checkbox {c} draws a small rectangle and the label c. Then queries gnumed for field c. if
-% gnumed returns true, draws a bullet in the rectangle 
+% \checkbox {c} draws a small rectangle, with a dot if c is nonzero
+
+% the documents use field values as TeX commands: viz. \patientaddress, \doctorname
+% these are defined by commands prepended to the document by the LaTeX module,
+% from the provided dictionary object. 
+% NOTE: they cannot contain underscores
+% NOTE 2: be careful of name collisions with LaTeX
 
 
 \NeedsTeXFormat{LaTeX2e}
@@ -19,8 +22,9 @@
 
 \LoadClass[a4paper]{minimal}
 % use 12pt as default
-% FIXME: provide a way to change font size
 \renewcommand{\normalsize}{\fontsize{12pt}{12pt}\selectfont}
+% provide smaller size
+\renewcommand{\small}{\fontsize{8pt}{8pt}\selectfont}
 % zero ``hard margins'' which default to 1 inch
 \setlength{\hoffset}{-1in}
 \setlength{\voffset}{-1in}
@@ -31,7 +35,7 @@
 \setlength{\textheight}{295mm}
 
 % our environment is really a picture environment covering the entire page
-\newenvironment{page}{\setlength{\unitlength}{1mm} \begin{picture}(210,295)(0,-295)}{\end{picture}}
+\newenvironment{page}{\setlength{\unitlength}{1mm}\begin{picture}(210,295)(0,-295)}{\end{picture}}
 
 % horiztional lines. Note Y is negative so coordinates are ``right''
 \DeclareRobustCommand{\lineh}[3]{\put(#1,-#2){\line(1,0){#3}}}
@@ -42,15 +46,7 @@
 \parbox[t]{#3 mm}{#4}
 }}
 
-% checbox. Emits a request as :Cxxxxx= on stdout, where xxxxx is the
-% checkbox label. Expects 1 or 0 on stdin.
-\DeclareRobustCommand{\checkbox}[1]{\typeout{:C#1=} \read-1 to \flag
-\ifnum\flag>0 \framebox(3,3){$\bullet$} \else \framebox(3,3){} \fi #1}
-
-% string field. Emits field name on stdout as :Fxxxxx= where xxxxx is the
-% field name, expects the value on stdin
-\DeclareRobustCommand{\field}[1]{\typeout{:F#1=} \read-1 to \n 
-\n
-}
+% checkbox. Box is checked if pased integer greater han zero
+\DeclareRobustCommand{\checkbox}[1]{\ifnum#1>0 \framebox(3,3){$\bullet$} \else \framebox(3,3){} \fi}
 
 
